--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "0f887ffb-e729-4589-80bd-6f49fd5007af"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
